perf: add final modifier and format :rocket: